--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,4 +1,4 @@
-{% block title %}Connexion{% endblock %}
+{% block title %}{% endblock %}
 
 
 {% block body %}
@@ -26,7 +26,7 @@
             <input type="hidden" name="_csrf_token"
                value="{{ csrf_token('authenticate') }}"
         >
-		<button class="submit-btn">Sign up</button>
+		<button class="submit-btn">Connexion</button>
 	</div>
 	<div class="login slide-up">
 		<div class="center">
@@ -43,7 +43,7 @@
 html,body {
 	position: relative;
 	min-height: 100vh;
-	background-color: #E1E8EE;
+	background-color: #181B22;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -53,7 +53,7 @@ html,body {
 }
 
 .form-structor {
-	background-color: #222;
+	background-color: black;
 	border-radius: 15px;
 	height: 550px;
 	width: 350px;
