préparation pour revue de sprint 2

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,12 +20,12 @@
     </div>
         <ul>
             <li><a href="#" class="active"><i class="fas fa-home"></i>&nbsp&nbsp Accueil</a></li>
-            <li><a href="http://localhost/24lilian31/public/instrument/lister"><i class="fas fa-keyboard"></i>&nbsp&nbsp Instrument</a></li>
-            <li><a href="http://localhost/24lilian31/public/cours/lister"><i class="fas fa-book"></i>&nbsp&nbsp Cours</a></li>
-            <li><a href=""><i class="fas fa-user-plus"></i>&nbsp&nbsp Inscription</a></li>
-            <li><a href="http://localhost/24lilian31/public/eleve/lister"><i class="fas fa-child"></i>&nbsp&nbsp Eleve</a></li>
-            <li><a href="http://localhost/24lilian31/public/professeur/lister"><i class="fas fa-chalkboard-teacher"></i>&nbsp&nbsp Professeur</a></li>
-            <li><a href=""><i class="fas fa-wrench"></i>&nbsp&nbsp Intervention</a></li>
+            <li><a href="http://172.20.177.77/lilian31/public/instrument/lister"><i class="fas fa-keyboard"></i>&nbsp&nbsp Instrument</a></li>
+            <li><a href="http://172.20.177.77/lilian31/public/cours/lister"><i class="fas fa-book"></i>&nbsp&nbsp Cours</a></li>
+            <li><a href="http://172.20.177.77/lilian31/public/inscription/lister"><i class="fas fa-user-plus"></i>&nbsp&nbsp Inscription</a></li>
+            <li><a href="http://172.20.177.77/lilian31/public/eleve/lister"><i class="fas fa-child"></i>&nbsp&nbsp Eleve</a></li>
+            <li><a href="http://172.20.177.77/lilian31/public/professeur/lister"><i class="fas fa-chalkboard-teacher"></i>&nbsp&nbsp Professeur</a></li>
+            <li><a href="http://172.20.177.77/lilian31/public/intervention/lister"><i class="fas fa-wrench"></i>&nbsp&nbsp Intervention</a></li>
         </ul>
     
   
