--- a/templates/eleve/lister.html.twig
+++ b/templates/eleve/lister.html.twig
@@ -229,7 +229,7 @@
             const confirmation = confirm('Êtes-vous sûr de vouloir supprimer cet élève ?');
             
             if (confirmation) {
-                window.location.href = `http://localhost/24lilian31/public/eleve/supprimer/${eleveId}`;
+                window.location.href = `http://172.20.177.77/lilian31/public/eleve/supprimer/${eleveId}`;
             }
         });
     });
