--- a/templates/professeur/lister.html.twig
+++ b/templates/professeur/lister.html.twig
@@ -217,7 +217,7 @@
     function confirmDelete(event, professorId) {
         event.preventDefault();
         if (confirm("Êtes-vous sûr de vouloir supprimer ce professeur ?")) {
-            window.location.href = 'http://localhost/24lilian31/public/professeur/supprimer/' + professorId;
+            window.location.href = 'http://172.20.177.77/lilian31/public/professeur/supprimer/' + professorId;
         }
     }
 </script>
